Remove .env file

--- a/.github/.gitIgnore
+++ b/.github/.gitIgnore
@@ -1,7 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,django,pycharm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,django,pycharm+all
 
-.idea
+.idea/
 
 ### Django ###
 *.log
