--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = [
     {name = "LightNow0",email = "kimlightnow@gmail.com"}
 ]
-readme = "README.md"
+
 requires-python = "^3.12"
 dependencies = [
     "django (>=5.2.1,<6.0.0)",
@@ -15,7 +15,9 @@ dependencies = [
     "drf-spectacular (>=0.28.0,<0.29.0)"
 ]
 
-
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
